fix unreadable text in cluster defn

--- a/karamel-ui/src/main/resources/assets/karamel/board/css/board.css
+++ b/karamel-ui/src/main/resources/assets/karamel/board/css/board.css
@@ -332,9 +332,9 @@ textarea[name="pubkey"]{
 
 /* Command Page CSS*/
 .editorResponseArea{
-  font-family:Courier;
+  font-family:Arial;
   padding: 10px;
-  font-size: 12px;
+  font-size: 14px;
   height: 1600px;
   width: 100%;
 }
